--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,10 +18,6 @@ h1 {
 	color: white;
 }
 
-.subtext {
-	text-decoration: italic;
-	color: white;
-}
 .head {
 	max-height: 100px;
 	text-align: center;
@@ -58,12 +54,27 @@ h1 {
     height: 80vh;
 }
 
+.content.column{
+	flex-direction: column;
+}
 
 #left-pic, #right-pic {
 	max-width: 250px;
 	max-height: 250px;
 	height: auto;
 	width: auto;
+	border: solid 3px;
+}
+
+#center-gif {
+	max-width: 500px;
+	max-height: 900px;
+	min-width: 300px;
+	min-height: 50vh;
+	height: auto;
+	width: auto;
+	margin-top: 50px;
+	margin-bottom: 50px;
 	border: solid 3px;
 }
 
@@ -79,7 +90,12 @@ h1 {
 
 .pic {
 	margin-right: auto;
-    margin-left: auto;
+  margin-left: auto;
+}
+
+.description{
+	flex: 1;
+	text-align: center;
 }
 
 .clickable {
@@ -126,13 +142,18 @@ p {
 	color: #FFD205;
 	background-color: black;
 	border: solid 1px #1E1E1E;
-	border-radius: 2px;
+	border-radius: 8px;
 	box-shadow: 0 2px #1E1E1E;
 }
 
 .button:active {
-	background-color: white;
-	box-shadow: 0 2px #1E1E1E;
+  background-color: #cecece;
+  transform: translateY(2px);
+}
+
+.button:hover {
+    background-color: #6d6d6d;
+    color: white;
 }
 
 /* Animation classes after button press */
